[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/images/BotonJugar.png" type="Texture" id=1]
[ext_resource path="res://herramientas/boton/Boton.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/iconos/larger.png" type="Texture" id=3]
[ext_resource path="res://herramientas/boton/Boton.gd" type="Script" id=4]
[ext_resource path="res://assets/images/BotonJugarHover.png" type="Texture" id=5]

[sub_resource type="GradientTexture" id=2]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 201.12, 55.6386 )

[sub_resource type="GDScript" id=4]
script/source = "extends TextureButton


func _ready() -> void:
	self.self_modulate = Color.darkgray

func _on_boton_pantalla_completa_pressed() -> void:
	OS.window_fullscreen = !OS.window_fullscreen


func _on_boton_pantalla_completa_mouse_entered() -> void:
	self.self_modulate = Color.white

func _on_boton_pantalla_completa_mouse_exited() -> void:
	self.self_modulate = Color.darkgray
"

[node name="Menu" type="Node2D"]
scale = Vector2( 1.8, 1.8 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.45098, 0.0352941, 0.317647, 1 )
self_modulate = Color( 0.235294, 0.0196078, 0.121569, 1 )
position = Vector2( 104.573, 306.161 )
scale = Vector2( 1.10212, 613.322 )
texture = SubResource( 2 )

[node name="BotonCreditos" parent="." instance=ExtResource( 2 )]
visible = false
position = Vector2( 735.211, 405.114 )
pantallaDestino = "res://pantallas/Creditos.tscn"

[node name="BotonJugar" type="Node2D" parent="."]
position = Vector2( 735.992, 146.667 )
script = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}
pantallaDestino = "res://pantallas/PantallaPrincipal.tscn"
texturaNormal = ExtResource( 1 )
texturaHover = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="BotonJugar"]
position = Vector2( -224.053, 156.45 )
scale = Vector2( 0.814919, 0.814919 )
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="BotonJugar"]
position = Vector2( -215.887, 66.6708 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="BotonJugar/Area2D"]
position = Vector2( -8.39154, 89.3466 )
shape = SubResource( 3 )

[node name="boton_pantalla_completa" type="TextureButton" parent="."]
margin_left = 1001.11
margin_top = 13.3333
margin_right = 1051.11
margin_bottom = 63.3333
texture_normal = ExtResource( 3 )
script = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="input_event" from="BotonJugar/Area2D" to="BotonJugar" method="_on_Area2D_input_event"]
[connection signal="mouse_entered" from="BotonJugar/Area2D" to="BotonJugar" method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="BotonJugar/Area2D" to="BotonJugar" method="_on_Area2D_mouse_exited"]
[connection signal="mouse_entered" from="boton_pantalla_completa" to="boton_pantalla_completa" method="_on_boton_pantalla_completa_mouse_entered"]
[connection signal="mouse_exited" from="boton_pantalla_completa" to="boton_pantalla_completa" method="_on_boton_pantalla_completa_mouse_exited"]
[connection signal="pressed" from="boton_pantalla_completa" to="boton_pantalla_completa" method="_on_boton_pantalla_completa_pressed"]
